@@ -1687,5 +1687,10 @@
 
 	* arch/arm/src/lpc17xx: Correct some typos/bugs in configuration of LPC17xx
 	  UART2 and UART3.
+	* nuttx/clock.h: Replace all references to the global variable g_system_timer
+	  with clock_systemtimer() (currently just a macro that that returns g_system_timer).
+	* lin/string/strrch.c: Would fail if the searched-for character were the first
+	  character in the string.
+
 
 
